Dessin de la tete

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     background-color: rgb(0, 133, 130);
     color: white;
 }
-.svg-figure {
+.svg-dessin {
     stroke: #f1f1f1;
     stroke-width: 5px;
     fill: transparent;
