--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Finger+Paint&display=swap');
+
+/*
+font-family: 'Dancing Script', cursive;
+font-family: 'Roboto', sans-serif;
+*/
+
+
 *, ::before, ::after {
     margin: 0;
     padding: 0;
@@ -6,10 +14,38 @@
 body {
     background-color: rgb(0, 133, 130);
     color: white;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 3px;
+    text-align: center;
 }
 .svg-dessin {
     stroke: #f1f1f1;
     stroke-width: 5px;
     fill: transparent;
     stroke-linecap: round;
+}
+.titre{
+    background-color: #7bd3594e;
+    padding: 15px 0;
+}
+h1 {
+    font-family: 'Dancing Script', cursive;
+}
+footer{
+    background-color: #7bd3594e;
+    padding: 15px 0;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+.titre{
+    flex-grow: 0;
+}
+.container-pendu{
+    flex-grow: 2;
+}
+.footer{
+    flex-grow: 0;
 }
