Mise a jour front

--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,19 @@ body {
     fill: transparent;
     stroke-linecap: round;
 }
+.dessin-bonhomme{
+    display: none;
+}
+#btn-rejouer{
+    display: none;
+}
 .titre{
     background-color: #7bd3594e;
     padding: 15px 0;
 }
 h1 {
     font-family: 'Dancing Script', cursive;
+    font-size: 60px;
 }
 footer{
     background-color: #7bd3594e;
@@ -45,7 +52,93 @@ footer{
 }
 .container-pendu{
     flex-grow: 2;
+    position: relative;
 }
 .footer{
     flex-grow: 0;
+}
+.gagne{
+    background-color: #f1f1f1;
+    color: rgb(0, 133, 130);
+    padding: 15px 0;
+    font-weight: bold;
+    font-size: 2rem;
+}
+.container-input{
+    border: 1px solid rgb(0, 133, 130);
+    width: 500px;
+    padding: 10px;
+    margin: 20px auto;
+    background-color:  #7bd3594e;
+    box-shadow: 0 2px 5px  #7bd3594e;
+}
+.container-input p{
+    font-size: 1.3rem;
+    font-style: italic;
+    padding: 15px 0;
+}
+
+.mots{
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.3rem;
+    margin: -40px 0 20px 0;
+}
+.lettre{
+    border-bottom: 3px solid #f1f1f1;
+    font-size: 25px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 3px;
+    height: 50px;
+    width: 20px;
+    font-family: 'Dancing Script', cursive;
+}
+.verification{
+    margin: 10px 0;
+}
+.verification input{
+    font-family: inherit;
+    width: 300px;
+    padding: 10px;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: 2px;
+    font-size: 1.2rem;   
+}
+.verification button{
+    width: 150px;
+    padding: 10px;
+    font-size: 1em;
+    box-shadow: 0 2px 0 rgb(0, 133, 130);
+    font-weight:600;
+    letter-spacing: 2px;
+}
+.verification button:hover{
+    cursor: pointer;
+}
+.verification button:active{
+    box-shadow: none;
+    position: relative;
+    top: 2px;
+}
+.erreur{
+    margin-bottom: 20px;
+    font-size: 1.3rem;
+}
+#btn-rejouer{
+    width: 300px;
+    padding: 15px 0;
+    margin-bottom: 10px;
+    font-size: 1em;
+    box-shadow: 0 2px 0 rgb(0, 133, 130);
+    font-weight:600;
+    letter-spacing: 2px;
+}
+#btn-rejouer:hover{
+    cursor: pointer;
+}
+#btn-rejouer:active{
+    box-shadow: none;
+    position: relative;
+    top: 2px;
 }
